--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="card">
+    <div class="main">
 
          <img class="qr-scanner" src="./Design Files/images/image-qr-code.png" alt="">
 
-         <h3>Improve your front-end skills by building projects </h3>
-         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+         <h1 class="card-heading">Improve your front-end
+            skills by building projects </h1>
+         <p class="card-para">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
     </div>
 
