--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
 
-         <img class="qr-scanner" src="./Design Files/images/image-qr-code.png" alt="">
+         <img class="qr-scanner" src="./DesignFiles/images/image-qr-code.png" alt="">
 
          <h1 class="card-heading">Improve your front-end
             skills by building projects </h1>
